appId: com.remirage.dev
---
- tapOn:
      id: "tab-support"
- assertVisible:
      text: "Send us a message"
      # alternatively, use the button's ID if available
- swipe:
      start: 50%, 20% # From (90% of width, 50% of height)
      end: 50%, 80% # To (10% of width, 50% of height)
- assertVisible:
      id: "home-tab"
